# internal/domain/volunteer/handler.go
@@ -45,7 +45,7 @@ func actorID(c *gin.Context) (int, bool) {
 // @Security BearerAuth
 // @Param request body CreateRequest true "Create volunteer"
 // @Success 200 {object} map[string]interface{}
-// @Router /volunteers [post]
+// @Router /master/volunteers [post]
 func (h *Handler) Create(c *gin.Context) {
 	var req CreateRequest
 	if ok := bindAndValidate(c, &req); !ok {
@@ -74,7 +74,7 @@ func (h *Handler) Create(c *gin.Context) {
 // @Param page query int false "Page number"
 // @Param limit query int false "Page size"
 // @Success 200 {object} map[string]interface{}
-// @Router /volunteers [get]
+// @Router /master/volunteers [get]
 func (h *Handler) GetAll(c *gin.Context) {
 	page, appErr := pagination.FromGin(c)
 	if appErr != nil {
@@ -97,7 +97,7 @@ func (h *Handler) GetAll(c *gin.Context) {
 // @Security BearerAuth
 // @Param id path int true "Volunteer ID"
 // @Success 200 {object} map[string]interface{}
-// @Router /volunteers/{id} [get]
+// @Router /master/volunteers/{id} [get]
 func (h *Handler) GetByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -122,7 +122,7 @@ func (h *Handler) GetByID(c *gin.Context) {
 // @Param id path int true "Volunteer ID"
 // @Param request body UpdateRequest true "Update volunteer"
 // @Success 200 {object} map[string]interface{}
-// @Router /volunteers/{id} [put]
+// @Router /master/volunteers/{id} [put]
 func (h *Handler) Update(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -153,7 +153,7 @@ func (h *Handler) Update(c *gin.Context) {
 // @Security BearerAuth
 // @Param id path int true "Volunteer ID"
 // @Success 200 {object} map[string]interface{}
-// @Router /volunteers/{id} [delete]
+// @Router /master/volunteers/{id} [delete]
 func (h *Handler) Delete(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
